--- a/src/Route/AboutUs/AboutUs.css
+++ b/src/Route/AboutUs/AboutUs.css
@@ -1,5 +1,10 @@
 #Main-About {
   background-image: url("../assets/GreyBack.jpg");
-  padding-top: 10%;
-  padding-bottom: 10%;
+  padding-top: 50%;
+  /* padding-bottom: 10%; */
+}
+#btn-aboutUs {
+  bottom: 0px;
+  display: inherit;
+  /* height: 60px; */
 }
