--- a/src/Route/contactus/ContactUs.css
+++ b/src/Route/contactus/ContactUs.css
@@ -1,5 +1,5 @@
 body {
-  background-color: aqua;
+  background-color: rgb(231, 231, 231);
   background-size: 100%;
   background-repeat: no-repeat;
 }
