--- a/src/Route/HomePage/HomePage.css
+++ b/src/Route/HomePage/HomePage.css
@@ -1,5 +1,9 @@
 .Carusel-Home {
   max-height: 100px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
+}
+#carousel-img {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
 }
 /* .center { */
 /* padding-top: 25%; */
